--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </p>
     <div id="image-container">
         <a href="https://uk.wikipedia.org/wiki/" target="_blank">
-            <img id="my-image" src="/images/Фото-Хмільника.jpg" alt="City">
+            <img id="my-image" src="/images/city.jpg" alt="City">
         </a>
     </div>
     <div>
