--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
         <button id="decrease-btn">Зменшити зображення</button>
         <button id="remove-btn">Видалити зображення</button>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
